anypoint-connector-devkit/v/3.5/setting-up-your-dev-environment.adoc
= Setting Up Your Development Environment

This document explains how to prepare a development environment that includes all the components required to develop Anypoint Connectors. You must have the following components installed and working in your local environment:

* http://www.oracle.com/technetwork/java/javase/archive-139210.html[Java Development Kit (JDK)] *version 6 or 7* to compile and build your Java code
* http://maven.apache.org/download.cgi[Maven] to manage your project's build 
* http://www.mulesoft.org/download-mule-esb-community-edition[Anypoint Studio] as the IDE in which to build and test your connector 

The sections below describe the specific details necessary for setting up your connector development environment.

image:/docs/download/attachments/122751297/2-package.png?version=1&modificationDate=1421451024862[image]

== Assumptions

This document assumes that you are familiar with a Java IDE (Eclipse or similar) and have some familiarity with the Maven build manager. Further, it assumes that you know how to install an instance of JDK 6 and Maven on your platform (Windows, Mac, or Linux).

== Anypoint Studio

Although you can use any Java IDE with Maven support, it's strongly recommended that you use *Anypoint Studio*, as it streamlines and simplifies several of the steps needed to build your connector.

[WARNING]
To build connector projects, you must first install the http://www.mulesoft.org/documentation/display/EARLYACCESS/Creating+an+Anypoint+Connector+Project[Anypoint Connector DevKit add-on] into Anypoint Studio.

If you have not already installed Anypoint Studio, follow the link:/docs/display/35X/Installing[detailed instructions] to install. For a quick introduction to Anypoint Studio, review link:/docs/display/35X/Anypoint+Studio+Essentials[Anypoint Studio Essentials].

== JDK 6 or JDK 7

Oracle makes JDK freely available for all supported platforms, including Windows, Mac OS X and Linux. Download version 6 or 7 of the http://www.oracle.com/technetwork/java/javase/archive-139210.html[Java Development Kit (JDK)] for your platform and install. 

== Maven Build Manager

If you are not familiar with Maven, http://maven.apache.org/guides/getting-started/maven-in-five-minutes.html[Maven in Five Minutes] provides a brief introduction to the concepts and basic commands. 

. Download the Maven distribution from the http://maven.apache.org/download.cgi[Maven download page].
. Unpack the download to a folder on your local drive. 
. Create an environment variable called `M2_HOME`, then set it to the folder into which you unpacked Maven.
. Update the `PATH` environment variable to include the path to Maven binaries.  +
* *Windows*: add the following to the PATH variable: `%M2_HOME%\bin`
* *Mac* or *Linux*: add the following to the PATH variable: `$M2_HOME/bin`

For more detailed instructions and installation options, see the Maven download page; instructions for different platforms are available below the download links.

=== See Also

* **NEXT:**  Continue to the next step by link:/docs/display/35X/Setting+up+your+API+access[Setting up your API access]. 
* Jump into link:/docs/display/35X/Creating+an+Anypoint+Connector+Project[Creating an Anypoint Connector Project].
* Eager to begin coding? Use the link:/docs/display/35X/Anypoint+Connector+Development[Anypoint Connector Development] for a quick walkthrough of the entire development process.
